fix: don't need more top gap on comment area

--- a/src/scss/templates/_comments.scss
+++ b/src/scss/templates/_comments.scss
@@ -11,7 +11,6 @@
 	@screen tablet-landscape {
 		@apply mx-auto px-0;
 
-		margin-top: calc( theme( 'spacing.gap' ) * 2 );
 		max-width: theme( 'layout.contentSize' );
 	}
 }
